--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
               <a class="btn btn-ghost" href="#contact">Liên hệ</a>
             </div>
             <div class="socials" aria-label="Mạng xã hội">
-              <a class="social fb" href="#" aria-label="Facebook" title="Facebook">
+              <a class="social fb" href="https://www.facebook.com/people/Daiu/61581718270273/" aria-label="Facebook" title="Facebook" rel="noopener noreferrer" target="_blank">
                 <svg viewBox="0 0 24 24" width="20" height="20" aria-hidden="true"><path fill="currentColor" d="M22 12.06C22 6.5 17.52 2 12 2S2 6.5 2 12.06C2 17.08 5.66 21.21 10.44 22v-7.01H7.9v-2.93h2.54V9.85c0-2.51 1.49-3.9 3.77-3.9 1.09 0 2.23.2 2.23.2v2.45h-1.25c-1.23 0-1.62.77-1.62 1.56v1.87h2.76l-.44 2.93h-2.32V22C18.34 21.21 22 17.08 22 12.06Z"/></svg>
               </a>
-              <a class="social ig" href="#" aria-label="Instagram" title="Instagram">
+              <a class="social ig" href="https://www.instagram.com/daiu.laz/" aria-label="Instagram" title="Instagram" rel="noopener noreferrer" target="_blank">
                 <svg viewBox="0 0 24 24" width="20" height="20" aria-hidden="true"><path fill="currentColor" d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3H7m5 3a5 5 0 1 1 0 10a5 5 0 0 1 0-10m0 2.2a2.8 2.8 0 1 0 0 5.6a2.8 2.8 0 0 0 0-5.6M18 6.5a1 1 0 1 1 0 2a1 1 0 0 1 0-2Z"/></svg>
               </a>
-              <a class="social tt" href="#" aria-label="TikTok" title="TikTok">
+              <a class="social tt" href="https://www.tiktok.com/@daiu.laza" aria-label="TikTok" title="TikTok" rel="noopener noreferrer" target="_blank">
                 <svg viewBox="0 0 24 24" width="20" height="20" aria-hidden="true"><path fill="currentColor" d="M21 8.5v3.02a8.53 8.53 0 0 1-4.8-1.54v6.27a5.75 5.75 0 1 1-5.75-5.75c.25 0 .5.02.73.06v3.12a2.65 2.65 0 1 0 1.81 2.51V2.98h3.03a4.85 4.85 0 0 0 4.98 4.85Z"/></svg>
               </a>
             </div>
